[gd_scene load_steps=12 format=3 uid="uid://brqnr3bux18p8"]

[ext_resource type="ButtonGroup" uid="uid://ccpisdash57d5" path="res://barkley2/resources/quick_meny/item_button_group.tres" id="1_l558s"]
[ext_resource type="Script" path="res://barkley2/scenes/Objects/System/_quick_menu/item_btn.gd" id="2_8hlsg"]
[ext_resource type="FontFile" uid="uid://dre1af5ictbg8" path="res://barkley2/resources/fonts/fn_7ocs.tres" id="3_eqx5s"]
[ext_resource type="Texture2D" uid="uid://byg0cvejuv0xm" path="res://barkley2/assets/b2_original/images/merged/sItem.png" id="3_v1vet"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wnnl7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t56eg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy1yq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.647059, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7p4i"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 0, 1)

[sub_resource type="Theme" id="Theme_e28vw"]
Button/styles/focus = SubResource("StyleBoxFlat_wnnl7")
Button/styles/hover = SubResource("StyleBoxFlat_t56eg")
Button/styles/normal = SubResource("StyleBoxFlat_sy1yq")
Button/styles/pressed = SubResource("StyleBoxFlat_i7p4i")

[sub_resource type="AtlasTexture" id="AtlasTexture_5611d"]
resource_local_to_scene = true
atlas = ExtResource("3_v1vet")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_421eu"]
font = ExtResource("3_eqx5s")

[node name="item_btn" type="Button"]
clip_contents = true
custom_minimum_size = Vector2(278, 20)
theme = SubResource("Theme_e28vw")
toggle_mode = true
button_group = ExtResource("1_l558s")
script = ExtResource("2_8hlsg")

[node name="item_spr" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 18.0
offset_bottom = 18.0
texture = SubResource("AtlasTexture_5611d")

[node name="item_name" type="Label" parent="."]
layout_mode = 1
offset_left = 19.0
offset_top = 5.0
offset_right = 59.0
offset_bottom = 14.0
text = "Item Name"
label_settings = SubResource("LabelSettings_421eu")

[node name="item_count" type="Label" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
offset_left = 260.0
offset_top = 2.0
offset_right = 276.0
offset_bottom = 18.0
text = "x1"
label_settings = SubResource("LabelSettings_421eu")
vertical_alignment = 1

[node name="item_description" type="Label" parent="."]
layout_mode = 1
offset_left = 18.0
offset_top = 21.5
offset_right = 76.0
offset_bottom = 30.5
text = "Item Description"
label_settings = SubResource("LabelSettings_421eu")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
